Implementation provider now provides impementations of abstract methods